--- a/ghost/core/core/server/services/email-service/email-templates/partials/styles.hbs
+++ b/ghost/core/core/server/services/email-service/email-templates/partials/styles.hbs
@@ -241,109 +241,40 @@ h2 {
     font-size: 32px;
 }
 
-{{#hasFeature "emailCustomizationAlpha"}}
-
-/* Post content headings */
-.post-content-row h1 {
-    {{#if sectionTitleColor}}
-    color: {{sectionTitleColor}};
-    {{else}}
-    color: #15212A; /* fallback to default */
-    {{/if}}
-}
-
-
-
-.post-content-row h2 {
-    {{#if sectionTitleColor}}
-    color: {{sectionTitleColor}};
-    {{else}}
-    color: #15212A; /* fallback to default */
-    {{/if}}
-}
-
-
-
-{{/hasFeature}}
-
 h3 {
     margin: 1.5em 0 0.5em 0;
     font-size: 26px;
 }
 
-{{#hasFeature "emailCustomizationAlpha"}}
-.post-content-row h3 {
-    {{#if sectionTitleColor}}
-    color: {{sectionTitleColor}};
-    {{else}}
-    color: #15212A; /* fallback to default */
-    {{/if}}
-}
-
-
-
-.post-content-row h4 {
-    margin: 1.8em 0 0.5em 0;
-    font-size: 21px;
-    line-height: 1.2em;
-    {{#if sectionTitleColor}}
-    color: {{sectionTitleColor}};
-    {{else}}
-    color: #15212A; /* fallback to default */
-    {{/if}}
-}
-
-
-{{else}}
 h4 {
     margin: 1.8em 0 0.5em 0;
     font-size: 21px;
     line-height: 1.2em;
 }
-{{/hasFeature}}
 
-{{#hasFeature "emailCustomizationAlpha"}}
-.post-content-row h5 {
-    margin: 2em 0 0.5em 0;
-    font-size: 19px;
-    line-height: 1.3em;
-    {{#if sectionTitleColor}}
-    color: {{sectionTitleColor}};
-    {{else}}
-    color: #15212A; /* fallback to default */
-    {{/if}}
-}
-
-
-{{else}}
 h5 {
     margin: 2em 0 0.5em 0;
     font-size: 19px;
     line-height: 1.3em;
 }
-{{/hasFeature}}
 
-{{#hasFeature "emailCustomizationAlpha"}}
-.post-content-row h6 {
-    margin: 2em 0 0.5em 0;
-    font-size: 19px;
-    line-height: 1.3em;
-    {{#if sectionTitleColor}}
-    color: {{sectionTitleColor}};
-    {{else}}
-    color: #15212A; /* fallback to default */
-    {{/if}}
-}
-
-
-
-{{else}}
 h6 {
     margin: 2em 0 0.5em 0;
     font-size: 19px;
     line-height: 1.3em;
 }
-{{/hasFeature}}
+
+/* Post content headings */
+.post-content-row h1,
+.post-content-row h2,
+.post-content-row h3,
+.post-content-row h4,
+.post-content-row h5,
+.post-content-row h6 {
+    {{#if sectionTitleColor}}
+    color: {{sectionTitleColor}};
+    {{/if}}
+}
 
 h1 strong,
 h2 strong,
@@ -457,7 +388,7 @@ figure blockquote p {
     text-align: center;
 }
 
-{{#hasFeature "emailCustomizationAlpha"}}
+{{#hasFeature "emailCustomization" "emailCustomizationAlpha"}}
 {{#if postTitleColor}}
 .post-title-color a {
     color: {{postTitleColor}} !important;
@@ -693,24 +624,18 @@ h3.latest-posts-header {
     color: #73818c !important;
 }
 
-{{#hasFeature "emailCustomizationAlpha"}}
 /* Custom heading colors for latest posts */
 .latest-post-title h4 {
     {{#if sectionTitleColor}}
     color: {{sectionTitleColor}};
-    {{else}}
-    color: #15212A; /* fallback to default */
     {{/if}}
 }
 
 .latest-post-title h4 a {
     {{#if sectionTitleColor}}
     color: {{sectionTitleColor}} !important;
-    {{else}}
-    color: #15212A !important;
     {{/if}}
 }
-{{/hasFeature}}
 
 /* -------------------------------------
     SUBSCRIPTION DETAILS BOX
