--- a/ghost/core/core/server/services/email-service/email-templates/partials/styles.hbs
+++ b/ghost/core/core/server/services/email-service/email-templates/partials/styles.hbs
@@ -535,6 +535,13 @@ figure blockquote p {
     FEEDBACK BUTTONS
 ------------------------------------- */
 
+.feedback-buttons-container {
+    padding: 32px 0 24px;
+    border-bottom: 1px solid #e0e7eb;
+    background-color: #ffffff;
+    text-align: center;
+}
+
 .feedback-buttons {
     /*width: auto !important;*/
     width: 100% !important;
@@ -561,6 +568,11 @@ figure blockquote p {
 /* -------------------------------------
     LATEST POSTS TABLE
 ------------------------------------- */
+
+.latest-posts-container {
+    padding: 24px 0;
+    border-bottom: 1px solid #e0e7eb;
+}
 
 h3.latest-posts-header {
     margin: 0;
