Newsletter divider color setting alpha
ref https://linear.app/ghost/issue/PROD-1705

- enabled divider color setting in newsletter design modal
- added `dividerColor` property to email template data
  - uses accent color when setting is set to "accent"
  - uses custom color when setting has a valid hex string
  - otherwise defaults to our standard "light" divider color (same when flag is not enabled)
- updated `styles.hbs` to use `{{dividerColor}}` everywhere we previously used the hardcoded "light" hex color for dividers
- CTA card still uses hardcoded hex colors when a different background color is applied

--- a/ghost/core/core/server/services/email-service/email-templates/partials/styles.hbs
+++ b/ghost/core/core/server/services/email-service/email-templates/partials/styles.hbs
@@ -86,7 +86,7 @@ hr {
     height: 1px;
     background-color: transparent;
     border: 0;
-    border-top: 1px solid #e0e7eb;
+    border-top: 1px solid {{dividerColor}};
 }
 
 p,
@@ -537,7 +537,7 @@ figure blockquote p {
 
 .feedback-buttons-container {
     padding: 32px 0 24px;
-    border-bottom: 1px solid #e0e7eb;
+    border-bottom: 1px solid {{dividerColor}};
     background-color: #ffffff;
     text-align: center;
 }
@@ -571,7 +571,7 @@ figure blockquote p {
 
 .latest-posts-container {
     padding: 24px 0;
-    border-bottom: 1px solid #e0e7eb;
+    border-bottom: 1px solid {{dividerColor}};
 }
 
 h3.latest-posts-header {
@@ -655,7 +655,7 @@ h3.latest-posts-header {
 
 .subscription-box {
     padding: 32px 0;
-    border-bottom: 1px solid #e0e7eb;
+    border-bottom: 1px solid {{dividerColor}};
     color: #15212A;
 }
 
@@ -702,7 +702,7 @@ h3.latest-posts-header {
     line-height: 1.5em;
     color: #15212A;
     padding-bottom: 20px;
-    border-bottom: 1px solid #e0e7eb;
+    border-bottom: 1px solid {{dividerColor}};
 }
 
 .post-content-sans-serif {
@@ -711,7 +711,7 @@ h3.latest-posts-header {
     line-height: 1.5em;
     color: #15212A;
     padding-bottom: 20px;
-    border-bottom: 1px solid #e0e7eb;
+    border-bottom: 1px solid {{dividerColor}};
 }
 
 .post-content-row:first-child > td, .header-image-row + .post-content-row > td {
@@ -1030,11 +1030,11 @@ td.kg-card-spacing {
 }
 
 .kg-cta-card.kg-cta-bg-none:not(.kg-cta-no-dividers) {
-    border-bottom: 1px solid #e0e7eb;
+    border-bottom: 1px solid {{dividerColor}};
 }
 
 .kg-cta-bg-none.kg-cta-no-label:not(.kg-cta-no-dividers) {
-    border-top: 1px solid #e0e7eb;
+    border-top: 1px solid {{dividerColor}};
 }
 
 .kg-cta-bg-white {
@@ -1072,7 +1072,7 @@ td.kg-card-spacing {
 
 .kg-cta-sponsor-label {
     padding: 12px 0;
-    border-bottom: 1px solid #e0e7eb;
+    border-bottom: 1px solid {{dividerColor}};
 }
 
 .kg-cta-bg-none .kg-cta-sponsor-label {
@@ -1086,7 +1086,7 @@ td.kg-card-spacing {
 
 .kg-cta-bg-none .kg-cta-sponsor-label,
 .kg-cta-bg-white .kg-cta-sponsor-label {
-    border-color: #e0e7eb;
+    border-color: {{dividerColor}};
 }
 
 .kg-cta-bg-grey .kg-cta-sponsor-label {
