--- a/ghost/core/core/server/services/email-service/email-templates/partials/styles.hbs
+++ b/ghost/core/core/server/services/email-service/email-templates/partials/styles.hbs
@@ -276,6 +276,12 @@ h6 {
     {{/if}}
 }
 
+{{#hasFeature "emailCustomization" "emailCustomizationAlpha"}}
+.post-content-row a {
+    color: {{linkColor}} !important;
+}
+{{/hasFeature}}
+
 h1 strong,
 h2 strong,
 h3 strong,
